--- a/packages/subgraph/package.json
+++ b/packages/subgraph/package.json
@@ -7,7 +7,7 @@
     "create-local": "graph create MolochVentures/moloch --node http://127.0.0.1:8020",
     "codegen": "graph codegen --debug --output-dir src/types/",
     "build": "graph build --debug",
-    "deploy": "graph deploy MolochVentures/moloch --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/",
+    "deploy": "graph deploy trojanfoundation/trojan-dao --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/",
     "deploy-local": "graph deploy MolochVentures/moloch --debug --ipfs http://localhost:5001 --node http://127.0.0.1:8020"
   },
   "devDependencies": {
