--- a/packages/subgraph/subgraph.yaml
+++ b/packages/subgraph/subgraph.yaml
@@ -36,10 +36,10 @@ dataSources:
           handler: handleUpdateDelegateKey       
       file: ./src/mapping.ts
   - kind: ethereum/contract
-    name: MolochPool
+    name: TrojanPool
     network: mainnet
     source:
-      address: '0x9FEb49aC78eC80838665d7Ab75E43CFBdC4f4277'
+      address: '0xcf2Ad8b7094A1b5ebf679d114F9658acD8645488'
       abi: MolochPool
     mapping:
       kind: ethereum/events
