--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ packages/backend/data/db.json
 packages/subgraph/build/
 node_modules/
 **/node_modules
+packages/contracts/artifacts/
+packages/contracts/cache/
