--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -22,6 +22,8 @@
     "web3-eth-abi": "^1.0.0-beta.36"
   },
   "devDependencies": {
+    "@nomiclabs/buidler": "^1.0.1",
+    "@nomiclabs/buidler-etherscan": "^1.0.1",
     "standard": "14.1.0"
   },
   "scripts": {
