--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -28,7 +28,8 @@
     "safe-web3-provider": "gnosis/safe-web3-provider#dac23b8",
     "semantic-ui-css": "2.4.1",
     "semantic-ui-react": "0.88.1",
-    "styled-components": "4.3.2"
+    "styled-components": "4.3.2",
+    "uuid": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,6 +49,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@nomiclabs/buidler": "^1.0.1",
     "eslint": "6.3.0",
     "eslint-config-airbnb": "18.0.1",
     "eslint-config-prettier": "6.3.0",
