--- a/packages/subgraph/package.json
+++ b/packages/subgraph/package.json
@@ -7,11 +7,11 @@
     "create-local": "graph create MolochVentures/moloch --node http://127.0.0.1:8020",
     "codegen": "graph codegen --debug --output-dir src/types/",
     "build": "graph build --debug",
-    "deploy": "graph deploy trojanfoundation/trojan-dao --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/",
+    "deploy": "graph deploy rhlsthrm/trojan-dao --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/",
     "deploy-local": "graph deploy MolochVentures/moloch --debug --ipfs http://localhost:5001 --node http://127.0.0.1:8020"
   },
   "devDependencies": {
-    "@graphprotocol/graph-cli": "0.15.0",
-    "@graphprotocol/graph-ts": "0.15.0"
+    "@graphprotocol/graph-cli": "0.17.1",
+    "@graphprotocol/graph-ts": "0.17.0"
   }
 }
