--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@apollo/react-hooks": "3.1.3",
     "@nivo/line": "0.61.1",
+    "@walletconnect/web3-provider": "^1.0.0-beta.47",
     "apollo-boost": "0.4.7",
     "apollo-cache-persist": "0.1.1",
     "ethers": "4.0.45",
@@ -28,7 +29,8 @@
     "semantic-ui-css": "2.4.1",
     "semantic-ui-react": "0.88.2",
     "styled-components": "5.0.1",
-    "uuid": "^7.0.1"
+    "uuid": "^7.0.1",
+    "web3connect": "^1.0.0-beta.32"
   },
   "scripts": {
     "start": "react-scripts start",
